src/test/resources/wacc_examples/invalid/syntaxErr/class/simple/badClassFunctionCall.wacc
# attempt to call function without 'call' before function reference

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  class c {
    int t,
    char c
    int f() is
        return 10
    end
  }
  c class1 = new c();
  int i = class1.f()
end
